--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 		var height = 3;
 		var ratio = width / height;
 		
-		var player = new MjpegPlayer('ws://' + location.host + ':8081', canvas, {
+		var player = new MjpegPlayer('ws://localhost:8081', canvas, {
 			drawInfo: true
 		});
 
